--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <div class="container">
     <section>
       <!-- Token Logo Image -->
-      <img src="images/grate_token_logo.jpg" alt="$GRATE Token Logo" class="logo-img" />
+      <img src="images/GRATE.jpg" alt="$GRATE Token Logo" class="logo-img" />
       
       <h2>About $GRATE</h2>
       <p>
