--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
     .header-banner {
       position: relative;
-      background: url('images/banner_1500x500.jpg') no-repeat center center;
+      background: url('banner_1500x500.jpg') no-repeat center center;
       background-size: cover;
       height: 300px; /* Adjust as needed */
       display: flex;
@@ -91,7 +91,7 @@
   <div class="container">
     <section>
       <!-- Token Logo Image -->
-      <img src="images/GRATE.jpg" alt="$GRATE Token Logo" class="logo-img" />
+      <img src="GRATE.jpg" alt="$GRATE Token Logo" class="logo-img" />
       
       <h2>About $GRATE</h2>
       <p>
