--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
     .header-banner {
       position: relative;
-      background: url('banner_1500x500.jpg') no-repeat center center;
+      background: url('images/banner_1500x500.jpg') no-repeat center center;
       background-size: cover;
       height: 300px; /* Adjust as needed */
       display: flex;
