--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
       margin: 20px auto;
       width: 150px; /* Adjust size as needed */
     }
+    /* (NEW) Optional styling for a GIF */
+    .gif-img {
+      display: block;
+      margin: 20px auto;
+      max-width: 200px; /* Adjust as desired */
+      border-radius: 5px;
+    }
   </style>
 </head>
 <body>
@@ -89,6 +96,11 @@
 
   <!-- Main Content Container -->
   <div class="container">
+    
+    <!-- Example GIF Placement -->
+    <!-- If you have a GIF, uncomment the line below and update the path to your actual GIF file -->
+    <!-- <img src="images/your_funny_grate.gif" alt="Fun GRATE GIF" class="gif-img" /> -->
+
     <section>
       <!-- Token Logo Image -->
       <img src="images/grate_logo.jpg" alt="$GRATE Token Logo" class="logo-img" />
