--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <!-- Header with Banner -->
     <header>
       <!-- Banner Image (optional) -->
-      <img src="images/grate_banner.jpg" alt="$GRATE Banner" class="banner" />
+      <img src="images/banner_1500x500.jpg" alt="$GRATE Banner" class="banner" />
 
       <h1 class="token-title">$GRATE Token</h1>
       
