--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
       <div class="logo-row">
         <img src="images/grate_logo.png" alt="GRATE Logo" />
         <!-- GIF Section -->
-        <div class="gif-section">
-          <img src="images/fun_animation.gif" alt="Exciting GIF" />
-        </div>
-      </div>
-    </header>
+  #      <div class="gif-section">
+  #        <img src="images/fun_animation.gif" alt="Exciting GIF" />
+  #      </div>
+  #    </div>
+   # </header>
 
     <!-- About Section -->
     <section>
