--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       
       <!-- Logo and GIF side by side -->
       <div class="logo-row">
-        <img src="images/grate_logo.png" alt="GRATE Logo" />
+        <img src="images/grate_logo.jpg" alt="GRATE Logo" />
         <!-- GIF Section -->
   #      <div class="gif-section">
   #        <img src="images/fun_animation.gif" alt="Exciting GIF" />
