--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       margin-top: 10px;
     }
 
-    /* TOKEN INFO */
+    /* TOKEN INFO CARDS */
     .token-info {
       display: flex;
       flex-wrap: wrap;
@@ -118,7 +118,7 @@
       margin-bottom: 5px;
       font-size: 1rem;
       font-weight: 600;
-      color: gold;
+      color: gold; /* compliments the coin’s color */
       text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
     }
     .info-card p {
@@ -138,15 +138,16 @@
 <body>
 
   <div class="wrapper">
+    
     <!-- HEADER -->
     <header>
       <h1>$GRATE Token</h1>
       <p>The Community-Driven Meme Token</p>
     </header>
 
-    <!-- GIF SECTION -->
+    <!-- GIF CONTAINER -->
     <div class="gif-container">
-      <!-- Make sure this file name matches exactly what's in your images folder -->
+      <!-- Make sure the file name and path match exactly -->
       <img src="images/grat_token.gif" alt="$GRATE Animated Logo" />
     </div>
 
@@ -156,11 +157,11 @@
       <p>
         $GRATE is a meme-driven project focused on uniting the crypto community
         with a fun and accessible token. Join us on our journey to revolutionize
-        the way people engage with digital assets.
+        how people engage with digital assets.
       </p>
     </section>
 
-    <!-- TOKEN INFO SECTION -->
+    <!-- TOKEN INFO -->
     <section>
       <h2>Token Info</h2>
       <div class="token-info">
@@ -179,7 +180,7 @@
       </div>
     </section>
 
-    <!-- ROADMAP SECTION -->
+    <!-- ROADMAP -->
     <section>
       <h2>Roadmap</h2>
       <ul>
