--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <!-- GIF CONTAINER -->
     <div class="gif-container">
       <!-- Make sure the file name and path match exactly -->
-      <img src="images/grat_token.gif" alt="$GRATE Animated Logo" />
+      <img src="images/grate_token.gif" alt="$GRATE Animated Logo" />
     </div>
 
     <!-- ABOUT SECTION -->
