--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     body {
       font-family: 'Poppins', sans-serif;
       background: linear-gradient(120deg, #111 30%, #444 100%);
-      /* Dark gradient complements the gold coin GIF */
       color: #f1f1f1;
       min-height: 100vh;
       display: flex;
@@ -34,34 +33,35 @@
     .wrapper {
       max-width: 900px;
       margin: 0 auto;
-      padding: 30px 20px;
+      padding: 40px 20px;
       flex: 1; /* pushes footer to bottom */
     }
 
     /* HEADER */
     header {
       text-align: center;
-      margin-bottom: 30px;
+      margin-bottom: 40px;
     }
     header h1 {
-      font-size: 2rem;
+      font-size: 2.2rem;
       font-weight: 700;
       color: #f1f1f1;
-      margin-bottom: 8px;
+      margin-bottom: 12px;
       text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
     }
     header p {
       font-weight: 300;
       color: #ddd;
+      font-size: 1rem;
     }
 
     /* GIF CONTAINER */
     .gif-container {
       text-align: center;
-      margin: 30px 0;
+      margin: 35px 0;
     }
     .gif-container img {
-      width: 300px;
+      width: 320px;
       max-width: 90%;
       border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.3);
@@ -71,15 +71,15 @@
     section {
       background: rgba(255, 255, 255, 0.05);
       border-radius: 8px;
-      padding: 20px;
-      margin-bottom: 20px;
+      padding: 25px;
+      margin-bottom: 25px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.3);
     }
     section h2 {
-      font-size: 1.4rem;
+      font-size: 1.5rem;
       font-weight: 600;
       color: #fff;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
       text-align: center;
       text-transform: uppercase;
       letter-spacing: 1px;
@@ -87,8 +87,8 @@
     section p, section li {
       font-weight: 300;
       line-height: 1.6;
-      margin-bottom: 8px;
       color: #ddd;
+      margin-bottom: 10px;
     }
     ul {
       list-style: inside disc;
@@ -96,7 +96,7 @@
       margin-top: 10px;
     }
 
-    /* TOKEN INFO CARDS */
+    /* TOKEN INFO WRAPPER */
     .token-info {
       display: flex;
       flex-wrap: wrap;
@@ -104,32 +104,39 @@
       justify-content: center;
       margin-top: 20px;
     }
+
+    /* INFO CARD */
     .info-card {
       flex: 1;
       min-width: 200px;
       background: rgba(255, 255, 255, 0.1);
       border-radius: 8px;
       text-align: center;
-      padding: 15px;
+      padding: 20px;
       box-shadow: 0 1px 4px rgba(0,0,0,0.3);
       margin-bottom: 10px;
+      position: relative;
     }
     .info-card h3 {
-      margin-bottom: 5px;
+      margin-bottom: 8px;
       font-size: 1rem;
       font-weight: 600;
-      color: gold; /* compliments the coin’s color */
+      color: gold;
       text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
     }
     .info-card p {
       font-weight: 300;
       color: #eee;
+      word-wrap: break-word;       /* ensures long text can wrap */
+      overflow-wrap: break-word;   /* ensures long text can wrap */
     }
-    /* This ensures long text wraps to a new line */
-    .contract-address {
-      word-wrap: break-word;
-      overflow-wrap: break-word;
-      margin-top: 5px;
+
+    /* HORIZONTAL LINE STYLE */
+    .hr-line {
+      width: 50%;
+      margin: 10px auto 15px auto;
+      border: none;
+      border-top: 1px solid rgba(255, 255, 255, 0.4);
     }
 
     /* FOOTER */
@@ -144,7 +151,7 @@
 <body>
 
   <div class="wrapper">
-    
+
     <!-- HEADER -->
     <header>
       <h1>$GRATE Token</h1>
@@ -153,7 +160,7 @@
 
     <!-- GIF CONTAINER -->
     <div class="gif-container">
-      <!-- Make sure the file name and path match exactly -->
+      <!-- Ensure images/grat_token.gif is correct path & file name -->
       <img src="images/grat_token.gif" alt="$GRATE Animated Logo" />
     </div>
 
@@ -177,9 +184,9 @@
         </div>
         <div class="info-card">
           <h3>Contract</h3>
-          <p class="contract-address">
-            FKVYQSkLdg5hYxxPwxFW7JrTVu6eq2sJLstd9HHppump
-          </p>
+          <hr class="hr-line" />
+          <!-- On its own line, with word-wrap for extra length -->
+          <p>FKVYQSkLdg5hYxxPwxFW7JrTVu6eq2sJLstd9HHppump</p>
         </div>
         <div class="info-card">
           <h3>Total Supply</h3>
