--- a/index.html
+++ b/index.html
@@ -168,6 +168,27 @@
       background: #fff;
     }
 
+    /* IMPORTANT LINKS STYLING */
+    .links-list {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    .links-list li {
+      margin: 10px 0;
+    }
+    .links-list a {
+      color: gold;
+      font-weight: 500;
+      text-decoration: none;
+      transition: color 0.3s;
+    }
+    .links-list a:hover {
+      color: #fff;
+      text-decoration: underline;
+    }
+
     /* FOOTER */
     footer {
       text-align: center;
@@ -232,14 +253,36 @@
       </div>
     </section>
 
-    <!-- ROADMAP -->
+    <!-- ROADMAP (ALREADY LAUNCHED) -->
     <section>
       <h2>Roadmap</h2>
       <ul>
-        <li>Token Launch & Initial Distribution</li>
+        <li><strong>Launched Successfully</strong></li>
         <li>Community Building & Social Engagement</li>
         <li>Listings & Strategic Partnerships</li>
         <li>Long-Term Utility & Ecosystem Growth</li>
+      </ul>
+    </section>
+
+    <!-- IMPORTANT LINKS -->
+    <section>
+      <h2>Track & Trade</h2>
+      <p>Monitor $GRATE on these platforms for real-time data and trading:</p>
+      <ul class="links-list">
+        <li>
+          <a 
+            href="https://pump.fun/coin/FKVYQSkLdg5hYxxPwxFW7JrTVu6eq2sJLstd9HHppump?coin_sort=market_cap" 
+            target="_blank"
+            >Pump.Fun</a
+          >
+        </li>
+        <li>
+          <a 
+            href="https://dexscreener.com/solana/j76zmuuffdewfmo8tnvywpbth32dqxngwrugbldntsrd" 
+            target="_blank"
+            >Dexscreener</a
+          >
+        </li>
       </ul>
     </section>
 
@@ -251,7 +294,7 @@
         whitepaper, detailing how $GRATE plans to revolutionize meme-token culture.
       </p>
       <div class="button-row">
-        <!-- Link to your PDF or a "Coming Soon" page -->
+        <!-- Link to your PDF or "Coming Soon" until it's available -->
         <a href="whitepaper.pdf" target="_blank" class="btn">
           Download Whitepaper
         </a>
