--- a/index.html
+++ b/index.html
@@ -189,6 +189,15 @@
       text-decoration: underline;
     }
 
+    /* LINK LOGOS */
+    .link-logo {
+      width: 20px;
+      height: 20px;
+      vertical-align: middle;
+      margin-right: 8px;
+      border-radius: 4px;
+    }
+
     /* FOOTER */
     footer {
       text-align: center;
@@ -207,7 +216,7 @@
       <h1>$GRATE Token</h1>
       <p>The Community-Driven Meme Token</p>
       <p>
-        Follow us for the latest news: 
+        Follow us for the latest news:
         <a href="https://x.com/GrateToken" target="_blank">@GrateToken</a>
       </p>
     </header>
@@ -223,12 +232,12 @@
       <h2>About $GRATE</h2>
       <p>
         $GRATE is a fun, meme-driven project focused on uniting the crypto
-        community with an accessible token. Inspired by the power of Internet culture, 
-        we aim to bring people together while paving the way for new developments 
+        community with an accessible token. Inspired by the power of Internet culture,
+        we aim to bring people together while paving the way for new developments
         in decentralized finance.
       </p>
       <p>
-        Whether you're new to crypto or a seasoned veteran, $GRATE welcomes you 
+        Whether you're new to crypto or a seasoned veteran, $GRATE welcomes you
         to join our journey toward a future shaped by collective creativity and innovation.
       </p>
     </section>
@@ -270,18 +279,32 @@
       <p>Monitor $GRATE on these platforms for real-time data and trading:</p>
       <ul class="links-list">
         <li>
-          <a 
-            href="https://pump.fun/coin/FKVYQSkLdg5hYxxPwxFW7JrTVu6eq2sJLstd9HHppump?coin_sort=market_cap" 
+          <a
+            href="https://pump.fun/coin/FKVYQSkLdg5hYxxPwxFW7JrTVu6eq2sJLstd9HHppump?coin_sort=market_cap"
             target="_blank"
-            >Pump.Fun</a
           >
+            <!-- Pill icon for Pump.Fun -->
+            <img
+              src="images/pumpfun.png"
+              alt="Pump.Fun Logo"
+              class="link-logo"
+            />
+            Pump.Fun
+          </a>
         </li>
         <li>
-          <a 
-            href="https://dexscreener.com/solana/j76zmuuffdewfmo8tnvywpbth32dqxngwrugbldntsrd" 
+          <a
+            href="https://dexscreener.com/solana/j76zmuuffdewfmo8tnvywpbth32dqxngwrugbldntsrd"
             target="_blank"
-            >Dexscreener</a
           >
+            <!-- Owl icon for DexScreener -->
+            <img
+              src="images/dexscreener.png"
+              alt="DexScreener Logo"
+              class="link-logo"
+            />
+            Dexscreener
+          </a>
         </li>
       </ul>
     </section>
@@ -290,7 +313,7 @@
     <section>
       <h2>Whitepaper</h2>
       <p>
-        Ready to delve deeper into our vision? Stay tuned for our official 
+        Ready to delve deeper into our vision? Stay tuned for our official
         whitepaper, detailing how $GRATE plans to revolutionize meme-token culture.
       </p>
       <div class="button-row">
