--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
       <div class="token-info">
         <div class="info-card">
           <h3>Symbol</h3>
-          <p>GRATE</p>
+          <p>$GRATE</p>
         </div>
         <div class="info-card">
           <h3>Contract</h3>
@@ -262,7 +262,7 @@
         </div>
         <div class="info-card">
           <h3>Total Supply</h3>
-          <p>Coming Soon</p>
+          <p>1 Billion</p>
         </div>
       </div>
     </section>
