--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
     <!-- GIF CONTAINER -->
     <div class="gif-container">
-      <img src="images/grate_token.gif" alt="$GRATE Animated Logo" />
+      <img src="images/grate_token_transparent.gif" alt="$GRATE Animated Logo" />
     </div>
 
     <!-- ABOUT SECTION -->
